fix jumping nav-links

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -85,12 +85,6 @@ h4, h5 {
   position: relative;
 }
 
-.top-right {
-  position: absolute;
-  right: 10px;
-  top: 18px;
-}
-
 .center {
   text-align: center;
 }
@@ -136,10 +130,10 @@ h4, h5 {
 }
 
 a:link, a:visited, a:active, a:hover {
-  transition:0.2s;
   text-decoration:none;
 }
 a:link, a:visited {
+  transition:0.2s;
   color:$mgreen;
   font-weight:400;
 }
@@ -159,7 +153,7 @@ a:active, a:hover {
 }
 
 .navbar-light .navbar-nav .nav-link{
-  color:$primary;
+  color: $primary;
 }
 
 .navbar-light .navbar-toggler {
@@ -170,6 +164,7 @@ a:active, a:hover {
 .small {
   font-size:85%;
 }
+
 .dark .small {
   font-weight:200;
   color:$body-bg;
